--- a/BZ2TerrainEditor/BZ2TerrainEditor.csproj
+++ b/BZ2TerrainEditor/BZ2TerrainEditor.csproj
@@ -72,6 +72,12 @@
     <Compile Include="HeightMapRangeDialog.Designer.cs">
       <DependentUpon>HeightMapRangeDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="HeightMapTranslatePanDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HeightMapTranslatePanDialog.Designer.cs">
+      <DependentUpon>HeightMapTranslatePanDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="HeightMapTranslateDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HeightMapRangeDialog.resx">
       <DependentUpon>HeightMapRangeDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HeightMapTranslatePanDialog.resx">
+      <DependentUpon>HeightMapTranslatePanDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HeightMapTranslateDialog.resx">
       <DependentUpon>HeightMapTranslateDialog.cs</DependentUpon>
@@ -163,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <None Include="Resources\arrow-move.png" />
     <None Include="Resources\exclamation-circle.png" />
     <None Include="Resources\arrow-resize-090.png" />
     <None Include="Resources\bzforums.png" />
